@@ -27,7 +27,7 @@ public class TypeAnnotationTest extends CopeAssert
 	{
 		try
 		{
-			Type.forClass(AnItem.class);
+			TypesBound.forClass(AnItem.class);
 			fail();
 		}
 		catch(IllegalArgumentException e)
@@ -36,7 +36,7 @@ public class TypeAnnotationTest extends CopeAssert
 		}
 		try
 		{
-			Type.forClassUnchecked(AnItem.class);
+			TypesBound.forClassUnchecked(AnItem.class);
 			fail();
 		}
 		catch(IllegalArgumentException e)
@@ -47,8 +47,8 @@ public class TypeAnnotationTest extends CopeAssert
 		
 		final Type<AnItem> type = Item.newType(AnItem.class);
 		
-		assertSame(type, Type.forClass(AnItem.class));
-		assertSame(type, Type.forClassUnchecked(AnItem.class));
+		assertSame(type, TypesBound.forClass(AnItem.class));
+		assertSame(type, TypesBound.forClassUnchecked(AnItem.class));
 		assertEquals("AnItemAnn", type.getID());
 		assertEquals(AnItem.class, type.getJavaClass());
 		assertEquals(true, type.isBound());
